--- a/template.html
+++ b/template.html
@@ -17,9 +17,9 @@
     <nav aria-label="Page navigation example">
         <ul class="pagination">
           <!-- <li class="page-item"><a class="page-link" href="#">Previous</a></li> -->
-          <li class="page-item"><button type="" id="page1" onclick="loadPage(1)">Page1</button></li>
-          <li class="page-item"><button type="" id="page2" onclick="loadPage(2)">Page2</button></li>
-          <li class="page-item"><button type="" id="page3" onclick="loadPage(3)">Page3</button></li>
+          <li class="page-item"><button type="" id="page1" class="page-link" onclick="loadPage(1)">Page1</button></li>
+          <li class="page-item"><button type="" id="page2" class="page-link" onclick="loadPage(2)">Page2</button></li>
+          <li class="page-item"><button type="" id="page3" class="page-link" onclick="loadPage(3)">Page3</button></li>
           <!-- <li class="page-item"><a class="page-link" href="#">Next</a></li> -->
         </ul>
       </nav>
@@ -32,7 +32,7 @@
     function loadPage(page){
     $('#content').html("");
     $.ajax({
-        url:"http://localhost:3000/data/v1/" + page
+        url:"https://d4703725.ngrok.io/data/v1/" + page
     }).then(function(res){
             res.forEach(function(element){
                 var card = $(`<div class="card col-md-3 px-2" style="width: 18rem;">
